Week5/Review/Ingress/dep-apache.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dep-apache
  namespace: review
  labels:
    app: myapp-apache
spec:
  selector:
    matchLabels:
      app: myapp-apache
  template:
    metadata:
      labels:
        app: myapp-apache
    spec:
      containers:
        - name: myapp-apache
          image: httpd:latest
          ports:
            - containerPort: 80
