Week5/Review/Ingress/dep-nginx.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-dep-nginx
  namespace: review
  labels:
    app: myapp-nginx
spec:
  selector:
    matchLabels:
      app: myapp-nginx
  template:
    metadata:
      labels:
        app: myapp-nginx
    spec:
      containers:
        - name: myapp-nginx
          image: nginx:latest
          ports:
            - containerPort: 80
