Week5/Review/Ingress/svc-apache.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-apache
  namespace: review
spec:
  selector:
    app: myapp-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
