Week5/Review/Ingress/svc-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
  namespace: review
spec:
  selector:
    app: myapp-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
