Week5/Review/Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: review
spec:
  rules:
    - http:
        paths:
          - path: "/nginx"
            pathType: Prefix
            backend:
              service:
                name: svc-nginx
                port: 
                  number: 80
          - path: "/apache"
            pathType: Prefix
            backend:
              service:
                name: svc-apache
                port: 
                  number: 80
